k8s/expensy-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: expensy-backend
  namespace: default
  labels:
    app: expensy-backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: expensy-backend
  template:
    metadata:
      labels:
        app: expensy-backend
    spec:
      serviceAccountName: expensy-sa # Permet au pod d'accéder à DynamoDB via l'IA
      containers:
        - name: backend
          image: mulema/expensy-backend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8706
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "250m"
              memory: "256Mi"
